# SSP

./: .gitignore  .gitmodules  CMakeLists.txt  ChangeLog.md  Makefile  Makefile.old  README.md  sider.yml
common/: BedFormat.hpp  BoostOptions.cpp  BoostOptions.hpp  CMakeLists.txt  GeneAnnotation.hpp  ReadAnnotation.cpp  ReadAnnotation.hpp  inline.hpp  seq.hpp  statistics.cpp  statistics.hpp  util.cpp  util.hpp
data/genometable/: genometable.SPombe.txt  genometable.T2T-mhaESC.txt  genometable.danRer11.txt  genometable.dm3.txt  genometable.galGal4.txt  genometable.galGal5.txt  genometable.rn6.txt  genometable.rn7.txt
data/mptable/: mptable.UCSC.SPombe.50mer.flen150.txt  mptable.UCSC.T2T-mhaESC.28mer.flen150.txt  mptable.UCSC.T2T-mhaESC.36mer.flen150.txt  mptable.UCSC.T2T-mhaESC.59mer.flen150.txt  mptable.UCSC.ce11.36mer.flen150.txt  mptable.UCSC.ce11.50mer.flen150.txt  mptable.UCSC.danRer11.36mer.flen150.txt  mptable.UCSC.danRer11.50mer.flen150.txt  mptable.UCSC.galGal6.36mer.flen150.txt  mptable.UCSC.galGal6.50mer.flen150.txt  mptable.UCSC.mm39.36mer.flen150.txt  mptable.UCSC.mm39.50mer.flen150.txt  mptable.UCSC.rn7.36mer.flen150.txt  mptable.UCSC.rn7.50mer.flen150.txt
scripts/: change_chrname_from_Greek.pl  change_chrname_to_Greek.pl  makegenedensity.pl  parsestats4DROMPA3.pl  parsestats4DROMPAplus.pl
src/: BoostOptions.cpp  BoostOptions.hpp  CMakeLists.txt  FragmentClusterScore.cpp  FragmentClusterScore.hpp  FragmentClusterScore_p.hpp  LibraryComplexity.cpp  LibraryComplexity.hpp  MThread.hpp  Mapfile.cpp  Mapfile.hpp  ParseBed.hpp  ParseMapfile.cpp  ParseMapfile.hpp  ReadBpStatus.cpp  ReadBpStatus.hpp  SeqStats.hpp  ShiftProfile.cpp  ShiftProfile.hpp  ShiftProfile_p.hpp  bpstatus.h  macro.h  mapfileclass.h  mthread.cpp  mthread.h  pw_gv.h  pw_readmapfile.cpp  pw_readmapfile.h  pw_shiftprofile.cpp  pw_shiftprofile_p.h  readdata.cpp  readdata.h  seq.h  ssp_estFlen.cpp  ssp_estFlen.h  ssp_gv.h  ssp_gv.hpp  ssp_main.cpp  ssp_shiftprofile.cpp  ssp_shiftprofile.h  (+8 more)
test/: CMakeLists.txt  ssp_main.cpp
